feature: FreeCell is working!!! (#21)
* feature: working on HSD.

* refactor: only use HSD's heuristics.